--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server:dev": "node --watch api/server.js"
+    "start": "node --watch api/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "fastify": "^5.0.0"
+    "fastify": "^5.0.0",
+    "fastify-plugin": "^5.0.1",
+    "sqlite3": "^5.1.7"
   }
 }
